devs/l502/l502api_compat.h


#define L502_SERIAL_SIZE            32
typedef enum {
    L502_ERR_OK                           = 0,    
    L502_ERR_INVALID_HANDLE               = -1,
    L502_ERR_MEMORY_ALLOC                 = -2,
    L502_ERR_ALREADY_OPENED               = -3,
    L502_ERR_DEVICE_NOT_FOUND             = -4,
    L502_ERR_DEVICE_ACCESS_DENIED         = -5,
    L502_ERR_DEVICE_OPEN                  = -6,
    L502_ERR_INVALID_POINTER              = -7,
    L502_ERR_STREAM_IS_RUNNING            = -8,
    L502_ERR_RECV                         = -9,
    L502_ERR_SEND                         = -10,
    L502_ERR_STREAM_OVERFLOW              = -11,
    L502_ERR_UNSUP_STREAM_MSG             = -12,
    L502_ERR_MUTEX_CREATE                 = -13,
    L502_ERR_MUTEX_INVALID_HANDLE         = -14,
    L502_ERR_MUTEX_LOCK_TOUT              = -15,
    L502_ERR_MUTEX_RELEASE                = -16,
    L502_ERR_INSUFFICIENT_SYSTEM_RESOURCES= -17,
    L502_ERR_NOT_IMPLEMENTED              = -18,
    L502_ERR_INSUFFICIENT_ARRAY_SIZE      = -19,
    L502_ERR_FPGA_REG_READ                = -20,
    L502_ERR_FPGA_REG_WRITE               = -21,
    L502_ERR_STREAM_IS_NOT_RUNNING        = -22,
    L502_ERR_INVALID_LTABLE_SIZE          = -102,
    L502_ERR_INVALID_LCH_NUMBER           = -103,
    L502_ERR_INVALID_LCH_RANGE            = -104,
    L502_ERR_INVALID_LCH_MODE             = -105,
    L502_ERR_INVALID_LCH_PHY_NUMBER       = -106,
    L502_ERR_INVALID_LCH_AVG_SIZE         = -107,
    L502_ERR_INVALID_ADC_FREQ_DIV         = -108,
    L502_ERR_INVALID_DIN_FREQ_DIV         = -108,
    L502_ERR_INVALID_MODE                 = -109,
    L502_ERR_INVALID_DAC_CHANNEL          = -110,
    L502_ERR_INVALID_REF_FREQ             = -111,
    L502_ERR_INVALID_INTERFRAME_DELAY     = -112,
    L502_ERR_INVALID_SYNC_MODE            = -113,
    L502_ERR_INVALID_DMA_CH               = -114,
    L502_ERR_REF_FREQ_NOT_LOCKED          = -131,
    L502_ERR_IOCTL_FAILD                  = -132,
    L502_ERR_IOCTL_TIMEOUT                = -133,
    L502_ERR_GET_INFO                     = -134,
    L502_ERR_DIG_IN_NOT_RDY               = -135,
    L502_ERR_RECV_INSUFFICIENT_WORDS      = -136,
    L502_ERR_DAC_NOT_PRESENT              = -137,
    L502_ERR_PROC_INVALID_CH_NUM          = -140,
    L502_ERR_PROC_INVALID_CH_RANGE        = -141,
    L502_ERR_FLASH_INVALID_ADDR           = -142,
    L502_ERR_FLASH_INVALID_SIZE           = -143,
    L502_ERR_FLASH_WRITE_TOUT             = -144,
    L502_ERR_FLASH_ERASE_TOUT             = -145,
    L502_ERR_FLASH_SECTOR_BOUNDARY        = -146,
    L502_ERR_LDR_FILE_OPEN                = -180,
    L502_ERR_LDR_FILE_READ                = -181,
    L502_ERR_LDR_FILE_FORMAT              = -182,
    L502_ERR_LDR_FILE_UNSUP_FEATURE       = -183,
    L502_ERR_LDR_FILE_UNSUP_STARTUP_ADDR  = -184,
    L502_ERR_BF_REQ_TIMEOUT               = -185,
    L502_ERR_BF_CMD_IN_PROGRESS           = -186,
    L502_ERR_BF_CMD_TIMEOUT               = -187,
    L502_ERR_BF_CMD_RETURN_INSUF_DATA     = -188,
    L502_ERR_BF_LOAD_RDY_TOUT             = -189,
    L502_ERR_BF_NOT_PRESENT               = -190,
    L502_ERR_BF_INVALID_ADDR              = -191,
    L502_ERR_BF_INVALID_CMD_DATA_SIZE     = -192
} t_lpcie_errs;
typedef t_x502_hnd t_l502_hnd;
LPCIE_EXPORT(int32_t) L502_AsyncGetAdcFrame(t_l502_hnd hnd, uint32_t flags,
                                       uint32_t tout, double* data);
LPCIE_EXPORT(int32_t) L502_Recv(t_l502_hnd hnd, uint32_t* buf, uint32_t size, uint32_t tout);
LPCIE_EXPORT(int32_t) L502_Send(t_l502_hnd hnd, const uint32_t* buf, uint32_t size, uint32_t tout);
LPCIE_EXPORT(int32_t) L502_ProcessAdcData(t_l502_hnd hnd, const uint32_t* src,  double *dest,
                            uint32_t *size, uint32_t flags);
LPCIE_EXPORT(int32_t) L502_ProcessData(t_l502_hnd hnd, const uint32_t* src, uint32_t size,
                     uint32_t flags, double *adc_data, uint32_t *adc_data_size,
                     uint32_t *din_data, uint32_t *din_data_size);
LPCIE_EXPORT(int32_t) L502_ProcessDataWithUserExt(t_l502_hnd hnd, const uint32_t* src, uint32_t size,
                                   uint32_t flags, double *adc_data,
                                   uint32_t *adc_data_size, uint32_t *din_data,
                                   uint32_t *din_data_size,
                                   uint32_t *usr_data, uint32_t *usr_data_size);
LPCIE_EXPORT(int32_t) L502_PrepareData(t_l502_hnd hnd, const double* dac1, const double* dac2,
                            const uint32_t* digout, uint32_t size, int32_t flags,
                            uint32_t* out_buf);
LPCIE_EXPORT(int32_t) L502_BfLoadFirmware(t_l502_hnd hnd, const char* filename);
LPCIE_EXPORT(int32_t) L502_BfCheckFirmwareIsLoaded(t_l502_hnd hnd, uint32_t *version);
LPCIE_EXPORT(int32_t) L502_BfMemRead(t_l502_hnd hnd, uint32_t addr, uint32_t* regs,
                                uint32_t size);
LPCIE_EXPORT(int32_t) L502_BfMemWrite(t_l502_hnd hnd, uint32_t addr,
                                 const uint32_t* regs, uint32_t size);
LPCIE_EXPORT(int32_t) L502_BfExecCmd(t_l502_hnd hnd, uint16_t cmd_code, uint32_t par,
                const uint32_t* snd_data, uint32_t snd_size,
                uint32_t* rcv_data, uint32_t rcv_size, uint32_t tout, uint32_t* recvd_size);
LPCIE_EXPORT(int32_t) L502_FlashRead(t_l502_hnd hnd, uint32_t addr, uint8_t* data,
                                uint32_t size);
LPCIE_EXPORT(int32_t) L502_FlashWrite(t_l502_hnd hnd, uint32_t addr,
                                 const uint8_t* data, uint32_t size);
LPCIE_EXPORT(int32_t) L502_FlashErase(t_l502_hnd hnd, uint32_t addr, uint32_t size);
LPCIE_EXPORT(int32_t) L502_FlashWriteEnable(t_l502_hnd hnd);
LPCIE_EXPORT(int32_t) L502_FlashWriteDisable(t_l502_hnd hnd);
LPCIE_EXPORT(uint32_t) L502_GetDllVersion(void);
LPCIE_EXPORT(const char*) L502_GetErrorString(int32_t err);
LPCIE_EXPORT(int32_t) L502_LedBlink(t_l502_hnd hnd);
LPCIE_EXPORT(int32_t) L502_SetDigInPullup(t_l502_hnd hnd, uint32_t pullups);